# routes/api.php
@@ -31,6 +31,7 @@ Route::middleware(['auth:api','admin'])->group(function(){
     Route::delete('/supprimer/{user}',[UsersController::class,"destroy"]);
     Route::put('/reactiverCompte/{user}',[UsersController::class,"reactiverCompte"]);
     Route::get('/listeCompteAReactiver',[UsersController::class,"listeCompteAReactiver"]);
+    Route::get('/listeCompteBloquer',[UsersController::class,"listeCompteBloquer"]);
     Route::get('/listeDonateur',[UsersController::class,"listeDonateur"]);
     Route::get('/listeFondation',[UsersController::class,"listeFondation"]);
     Route::get('/voirHistoriqueDon',[UsersController::class,"VoirhistoriqueDesDonsPourUnDonateur"]);
